<resources>
    <string name="app_name">module_wxgd</string>
    <string name="workName">维修工单</string>
    <string name="tableStatus">单据状态</string>
    <string name="eamName">设备名称:</string>
    <string name="location">区域位置:</string>
    <string name="repairGroup">维修组:</string>
    <string name="chargeStaff">负责人:</string>
    <string name="workSource">工单来源:</string>
    <string name="repairType">维修类型:</string>
    <string name="faultInfoType">隐患类型:</string>
    <string name="priority">优先级:</string>
    <string name="faultInfoDescribe">隐患现象:</string>
    <string name="content">内容:</string>
    <string name="claim">要求:</string>
    <string name="receive">接\t单</string>
    <string name="checkRepair">转为检修</string>
    <string name="bigRepair">转为大修</string>
    <string name="eamCode">设备编码:</string>
    <string name="period">周期:</string>
    <string name="periodUnit">周期单位:</string>
    <string name="lastExecuteTime">上次执行时间:</string>
    <string name="nextExecuteTime">下次执行时间:</string>
    <string name="planStartTime">计划开始时间:</string>
    <string name="planEndTime">计划结束时间:</string>
    <string name="staff">人员:</string>
    <string name="sparePart">备件:</string>
    <string name="oils">润滑油:</string>
    <string name="index">序号:</string>
    <string name="code">编码:</string>
    <string name="name">名称:</string>
    <string name="sum">数量:</string>
    <string name="timesNum">次数:</string>
    <string name="type">规格:</string>
    <string name="model">型号:</string>
    <string name="workHour">工时(H):</string>
    <string name="actualStartTime">实际开始时间:</string>
    <string name="actualEndTime">实际结束时间:</string>
    <string name="oilCode">润滑油编码:</string>
    <string name="OilType">加换油:</string>
    <string name="historySparePart">历史记录</string>
    <string name="wxTimes">第%s次</string>
    <string name="acceptanceTimes">第%s次验收</string>
    <string name="lastDuration">上次执行时长(H):</string>
    <string name="useQuantity">领用量:</string>
    <string name="actualQuantity">实际用量:</string>
    <string name="standingCrop">现存量:</string>
    <string name="useState">领用状态:</string>
    <string name="content_workList">内容:</string>
    <string name="claim_workList">要求:</string>
    <string name="remark">备注</string>
    <string name="work_finished">已完成</string>
    <string name="work_dispatch">待派工</string>
    <string name="work_executing">执行中</string>
    <string name="work_acceptance">待验收</string>
</resources>
