<?xml version="1.0" encoding="utf-8"?>
<com.supcon.common.view.view.CustomSwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemSwipeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="itemSwipeLayout">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:tag="main">

        <include layout="@layout/ly_times_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/repairStaffName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:paddingStart="@dimen/dp_5"
                android:tag="repairStaffName"
                app:key="@string/staff"
                app:key_width="@dimen/dp_50"/>
            <include layout="@layout/ly_line_light" />
            <com.supcon.mes.mbap.view.CustomDateView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:id="@+id/actualStartTime"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:tag="actualStartTime"
                app:editable="true"
                app:text="@string/actualStartTime"
                app:text_width="@dimen/dp_100"/>
            <include layout="@layout/ly_line_light" />
            <com.supcon.mes.mbap.view.CustomDateView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:id="@+id/actualEndTime"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="5dp"
                android:tag="actualEndTime"
                app:editable="true"
                app:text="@string/actualEndTime"
                app:text_width="@dimen/dp_100"/>
            <include layout="@layout/ly_line_light" />
            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/workHour"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:paddingStart="@dimen/dp_5"
                android:tag="workHour"
                app:text="@string/workHour"
                app:key_width="@dimen/dp_60"/>
            <include layout="@layout/ly_line_light" />
            <com.supcon.mes.mbap.view.CustomVerticalEditText
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:tag="remark"
                app:edit_hint="请输入备注信息"
                app:edit_maxLine="4"
                app:key="@string/remark" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemViewDelBtn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/deleteBgColor"
            android:gravity="center"
            android:tag="itemViewDelBtn"
            android:text="删除"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_14sp" />

    </LinearLayout>

</com.supcon.common.view.view.CustomSwipeLayout>
