<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_5"
    android:paddingEnd="@dimen/dp_10"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/ly_repairinfo_title" />

    <include layout="@layout/ly_ele_off_apply"/>
    <include layout="@layout/ly_line_light_light" />
    <LinearLayout
        android:id="@+id/dispatcherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="dispatcherLayout">
        <com.supcon.mes.mbap.view.CustomTextView
            android:id="@+id/dispatcherStaff"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="@dimen/dp_10"
            android:tag="dispatcherStaff"
            app:key="派单人:"
            app:key_width="@dimen/dp_100"/>

        <include layout="@layout/ly_line_light_light" />
    </LinearLayout>
    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/workTicketTable"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="@dimen/dp_10"
        android:tag="workTicketTable"
        app:key="检修票:"
        app:key_width="@dimen/dp_100"/>
    <include layout="@layout/ly_line_light_light" />
    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/eleOffTable"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="@dimen/dp_10"
        android:tag="eleOffTable"
        app:key="停电票:"
        app:key_width="@dimen/dp_100"/>
    <include layout="@layout/ly_line_light_light" />
    <com.supcon.mes.mbap.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:paddingStart="@dimen/dp_10"
        android:id="@+id/repairGroup"
        android:tag="repairGroup"
        app:editable="true"
        app:key="@string/repairGroup"
        app:key_width="@dimen/dp_100"/>

    <include layout="@layout/ly_line_light_light" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/chargeStaff"
        android:paddingStart="@dimen/dp_10"
        android:tag="chargeStaff"
        app:editable="true"
        app:key="@string/chargeStaff"
        app:key_width="@dimen/dp_100"/>


    <include layout="@layout/ly_line_light_light" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/wosource"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:tag="wosource"
        app:key="工单来源："
        app:text_size="15"
        app:key_width="@dimen/dp_100"/>
    <include layout="@layout/ly_line_light_light" />
    <com.supcon.mes.mbap.view.CustomSpinner
        android:id="@+id/repairType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:tag="repairType"
        app:editable="false"
        app:key="维修类型："
        app:text_size="15"
        app:text_width="@dimen/dp_100"/>

    <include layout="@layout/ly_line_light_light" />

    <com.supcon.mes.mbap.view.CustomDateView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:paddingStart="@dimen/dp_10"
        android:id="@+id/planStartTime"
        android:tag="planStartTime"
        app:editable="true"
        app:text="@string/planStartTime"
        app:text_width="@dimen/dp_120"
        app:necessary="true"/>
    <include layout="@layout/ly_line_light_light" />
    <com.supcon.mes.mbap.view.CustomDateView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/planEndTime"
        android:paddingStart="@dimen/dp_10"
        android:tag="planEndTime"
        app:editable="true"
        app:text="@string/planEndTime"
        app:text_width="@dimen/dp_120"
        app:necessary="true"/>

    <include layout="@layout/ly_line_light_light" />

    <com.supcon.mes.mbap.view.CustomVerticalDateView
        android:id="@+id/realEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_10"
        android:tag="realEndTime"
        app:editable="true"
        app:necessary="true"
        app:text="实际结束时间：" />

    <include layout="@layout/ly_line_light_light" />
    <com.supcon.mes.mbap.view.CustomVerticalEditText
        android:id="@+id/repairAdvise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_10"
        android:tag="repairAdvise"
        app:edit_maxLine="10"
        app:key="维修建议："
        app:text_size="15" />

    <include layout="@layout/ly_line_light_light" />

    <com.supcon.mes.mbap.view.CustomVerticalEditText
        android:id="@+id/workContext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:tag="workContext"
        app:editable="false"
        app:key="工单内容："
        app:text_size="15" />
</LinearLayout>