<?xml version="1.0" encoding="utf-8"?>
<com.supcon.common.view.view.CustomSwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemSwipeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="itemSwipeLayout">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:tag="main">

        <include layout="@layout/ly_times_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5">

                <com.supcon.mes.mbap.view.CustomVerticalTextView
                    android:id="@+id/oilName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="oilName"
                    app:editable="false"
                    app:text="@string/oils"
                    app:text_size="15" />

                <include layout="@layout/ly_vertical_line" />

                <com.supcon.mes.mbap.view.CustomVerticalTextView
                    android:id="@+id/oilCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/dp_10"
                    android:tag="oilCode"
                    app:editable="false"
                    app:key="@string/oilCode"
                    app:necessary="false"
                    app:text_size="15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5">

                <com.supcon.mes.mbap.view.CustomVerticalTextView
                    android:id="@+id/attachEam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="attachEam"
                    app:content_hint="--"
                    app:editable="false"
                    app:key="附属设备:"
                    app:text_size="15" />

                <include layout="@layout/ly_vertical_line" />

                <com.supcon.mes.mbap.view.CustomVerticalTextView
                    android:id="@+id/sparePartId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/dp_10"
                    android:tag="sparePartId"
                    app:content_hint="--"
                    app:editable="false"
                    app:key="零部件:"
                    app:necessary="false"
                    app:text_size="15" />
            </LinearLayout>

            <com.supcon.mes.mbap.view.CustomNumView
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white"
                android:padding="@dimen/dp_5"
                android:tag="sum"
                app:editable="true"
                app:text="数量:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_5">

                <com.supcon.mes.mbap.view.CustomVerticalSpinner
                    android:id="@+id/oilType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:tag="oilType"
                    app:editable="false"
                    app:text="@string/OilType"
                    app:text_size="15" />

            </LinearLayout>

            <com.supcon.mes.mbap.view.CustomVerticalEditText
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:tag="remark"
                android:visibility="gone"
                app:edit_hint="请输入备注信息"
                app:edit_maxLine="4"
                app:key="@string/remark"
                app:text_size="15" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemViewDelBtn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/deleteBgColor"
            android:gravity="center"
            android:tag="itemViewDelBtn"
            android:text="删除"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_14sp" />

    </LinearLayout>
</com.supcon.common.view.view.CustomSwipeLayout>


